infrastructure/newt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newt
  # labels:
  #   pod-security.kubernetes.io/enforce: privileged
